--- a/includes/css/cherry-plugin.less
+++ b/includes/css/cherry-plugin.less
@@ -1,3 +1,130 @@
+/* #Shortcodes
+================================================== */
+
+/* Carousel (OWL)
+---------------------------------------- */
+.owl-carousel {
+	margin-bottom: 15px;
+	.item {
+		margin: 3px;
+		word-wrap: break-word;
+		-webkit-hyphens: auto;
+		-moz-hyphens: auto;
+		-ms-hyphens: auto;
+		-o-hyphens: auto;
+		hyphens: auto;
+		figure {
+				display: block;
+				width: 100%;
+				margin: 0 0 10px 0;
+				a {
+					display: block;
+					img {
+						display: block;
+						width: 100%;
+						height: auto;
+					}
+				}
+		}
+	}
+	.owl-wrapper-outer {
+		margin: 0 0 15px 0;
+	}
+}
+
+/* Carousel (Elasti)
+---------------------------------------- */
+.carousel-wrap {
+	position: relative;
+	margin: 0;
+}
+.es-carousel {
+	overflow: hidden;
+
+	&-wrapper {
+		position: relative;
+		padding: 0;
+	}
+	&_list {
+		display: none;
+		margin-bottom: 0;
+		padding: 0;
+		list-style: none;
+		&:before,
+		&:after {
+			display: table;
+			content: "";
+			line-height: 0;
+		}
+		&:after {
+			clear: both;
+		}
+	}
+	&_li {
+		display: block;
+		float: left;
+		margin: 0;
+		padding: 0;
+		color: #000;
+		word-wrap: break-word;
+		-webkit-hyphens: auto;
+		-moz-hyphens: auto;
+		-ms-hyphens: auto;
+		-o-hyphens: auto;
+		hyphens: auto;
+
+		.featured-thumbnail {
+			float: none;
+			margin: 0 0 20px;
+			img {
+				display: block;
+				margin: 0;
+				padding: 0;
+				max-width: 100%;
+				max-height: 100%;
+				border: none;
+			}
+		}
+		.desc {
+			margin: 0;
+			padding: 0;
+		}
+		h5 {
+			margin-bottom: .5em;
+			font-weight: bold;
+			a {
+				text-decoration: underline;
+				&:hover {
+					text-decoration: none;
+				}
+			}
+		}
+		.excerpt {
+			margin-bottom: 10px;
+		}
+	}
+}
+.es-nav span {
+	position: absolute;
+	top: 0;
+	right: 32px;
+	margin-top: -35px;
+	width: 14px;
+	height: 26px;
+	background: transparent url(../images/nav.png) no-repeat top left;
+	text-indent:-9000px;
+	opacity: 0.8;
+	cursor: pointer;
+	&.es-nav-next {
+		right: 12px;
+		left: auto;
+		background-position: top right;
+		&:hover {
+			opacity: 1.0;
+		}
+	}
+}
+
 /* #Misc
 ================================================== */
 
@@ -95,6 +222,12 @@
 		-webkit-box-sizing: border-box;
 		-moz-box-sizing: border-box;
 		box-sizing: border-box;
+		word-wrap: break-word;
+		-webkit-hyphens: auto;
+		-moz-hyphens: auto;
+		-ms-hyphens: auto;
+		-o-hyphens: auto;
+		hyphens: auto;
 		-webkit-transition: box-shadow 0.2s linear;
 		-moz-transition: box-shadow 0.2s linear;
 		-o-transition: box-shadow 0.2s linear;
@@ -143,6 +276,7 @@
 		&.plan-labelled {
 			margin-top: 61px;
 			border-bottom: none;
+			background-color: transparent;
 			text-transform: none;
 			@media (max-width: 767px) {
 				display: none;
@@ -173,6 +307,7 @@
 			color: #fff;
 		}
 		.btn {
+			display: inline-block;
 			margin-bottom: 20px;
 			margin-top: 20px;
 		}
