Изменил подключение скрипта карусели, изменил логику импорта классов виджетов.

--- a/includes/css/cherry-plugin.less
+++ b/includes/css/cherry-plugin.less
@@ -1503,6 +1503,7 @@ iframe .uiHeader h3{
 					background: rgba(0, 0, 0, 0.2);
 					border-radius: 5px;
 					display: inline-block;
+					min-width: 44px;
 				}
 			}
 		}
