add Banner widget

--- a/includes/css/cherry-plugin.less
+++ b/includes/css/cherry-plugin.less
@@ -1313,6 +1313,25 @@
 
 }
 
+.banner_link{
+	&:hover{
+		text-decoration: none;
+	}
+	.banner_wrapper{
+		padding: 30px 15px;
+	}
+}
+.banner_wrapper{
+	padding: 30px 0;
+		&.fill_class{
+			background-position: 50% 50%;
+			background-repeat: no-repeat;
+			background-size: cover;
+		}
+		.thumbnail{
+			margin: 0 0 20px 0;
+		}
+}
 
 /* vCard widget
 ---------------------------------------- */
