--- a/includes/css/cherry-plugin.css
+++ b/includes/css/cherry-plugin.css
@@ -1330,6 +1330,27 @@ iframe .uiHeader h3 {
 .extra-wrap {
   overflow: hidden;
 }
+.content_box {
+  position: relative;
+  background: #F5F5F5;
+}
+.content_box:after,
+.content_box:before {
+  background: #F5F5F5;
+  content: "";
+  position: absolute;
+  top: 0;
+  width: 101%;
+  height: 100%;
+  z-index: -1;
+}
+.content_box:after {
+  right: -99%;
+}
+.content_box:before {
+  left: -99%;
+}
+
 #maintenance_mode_notice {
   position: fixed;
   top: 0px;
