--- a/includes/css/cherry-plugin.less
+++ b/includes/css/cherry-plugin.less
@@ -1454,6 +1454,27 @@ iframe .uiHeader h3{
 .extra-wrap {
 	overflow:hidden;
 }
+
+.content_box{
+	position:relative;
+	background: #F5F5F5;
+		&:after, &:before {
+			background: #F5F5F5;
+			content: "";
+			position: absolute;
+			top: 0;
+			width: 101%;
+			height: 100%;
+			z-index:-1;
+		}
+		&:after{
+			right: -99%;
+		}
+		&:before {
+			left: -99%;
+		}
+}
+
 //--------------------------------------------------------
 // Maintenance mode notice style
 //--------------------------------------------------------
