UPD: css .comments-custom

--- a/includes/css/cherry-plugin.less
+++ b/includes/css/cherry-plugin.less
@@ -1186,7 +1186,7 @@
 	li {
 		overflow:hidden;
 		margin:0;
-		padding:25px 0 25px 0;
+		padding:0 0 25px 0;
 		border-bottom:none;
 		background:none;
 		&:first-child {
