--- a/includes/css/cherry-plugin.css
+++ b/includes/css/cherry-plugin.css
@@ -1099,7 +1099,7 @@
 .comments-custom li {
   overflow: hidden;
   margin: 0;
-  padding: 25px 0 25px 0;
+  padding: 0 0 25px 0;
   border-bottom: none;
   background: none;
 }
