--- a/includes/css/cherry-plugin.less
+++ b/includes/css/cherry-plugin.less
@@ -516,6 +516,11 @@
 			display: block;
 			padding-top: 22px;
 			padding-left: 40px;
+				.user{
+					&:after{
+						content:",";
+					}
+				}
 		}
 
 	}
