--- a/includes/css/cherry-plugin.less
+++ b/includes/css/cherry-plugin.less
@@ -1475,8 +1475,23 @@ iframe .uiHeader h3{
 }
 
 .content_box{
-	position:relative;
+	position: relative;
 	background: #F5F5F5;
+	&:after, &:before {
+		background: #F5F5F5;
+		content: "";
+		position: absolute;
+		top: 0;
+		width: 101%;
+		height: 100%;
+		z-index: -1;
+	}
+	&:after{
+		right: -99%;
+	}
+	&:before {
+		left: -99%;
+	}
 }
 
 //--------------------------------------------------------
