--- a/includes/css/cherry-plugin.css
+++ b/includes/css/cherry-plugin.css
@@ -498,7 +498,6 @@
   margin: 15px 0 0 5px;
 }
 .site_map ul li {
-  word-break: break-word;
   padding-bottom: 5px;
 }
 @media (max-width: 480px) {
@@ -1035,17 +1034,19 @@
   z-index: -1;
 }
 .google-map-api {
-  width:100%;
-  height:600px;
-  top:0;
-  position:relative;
-  background:#fff;
+  width: 100%;
+  height: 600px;
+  top: 0;
+  position: relative;
+  background: #fff;
 }
 .google-map-api .gmap {
-  width:100%;
-  height:100%;
+  width: 100%;
+  height: 100%;
 }
-.google-map-api .gmap img { max-width:none !important; }
+.google-map-api .gmap img {
+  max-width: none !important;
+}
 /* #Widgets
 ================================================== */
 /* General for Widget
@@ -1582,17 +1583,17 @@ div[id^="cherry_instagram_widget"] .img_thumbnail ul li {
   }
 }
 /*.ie8{
-  div[id^="cherry_instagram_widget"]{
-    .img_likes{
-      i{
-        color: rgba(255, 0, 0);
+	div[id^="cherry_instagram_widget"]{
+		.img_likes{
+			i{
+				color: rgba(255, 0, 0);
 
-      }
-    }
-    .img_commetn_count{
-      i{
-        color: rgba(0, 122, 255);
-      }
-    }
-  }
+			}
+		}
+		.img_commetn_count{
+			i{
+				color: rgba(0, 122, 255);
+			}
+		}
+	}
 }*/
